infrastructure/stirlingpdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirlingpdf
  labels:
    app: stirlingpdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirlingpdf
  template:
    metadata:
      labels:
        app: stirlingpdf
    spec:
      containers:
        - name: stirlingpdf
          image: ghcr.io/stirling-tools/stirling-pdf:0.46.2-ultra-lite@sha256:caa8440ea33bf0f5cf42ae3bec7e6538479100655c8cfd9b622fb1b987ff26d3
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 400m
              memory: 750Mi
