infrastructure/stirlingpdf/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirlingpdf
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
  hostnames:
    - "pdf.hackcorp.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: stirlingpdf
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
